<resources>
    <string name="app_name">Lenslore</string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="description_text">Dive into your passion and showcase the world your marvelous works.</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="title_activity_test">test</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="create_your_account">Create your Account</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_email">Enter your emailed</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="let_s_share_your_work_to_the_world">Let\'s share your work to the world</string>
    <string name="back">back</string>
    <string name="please_enter_your_email_to_receive_your_otp_to_reset_your_password">Please enter your email to receive your OTP to reset your password.</string>
    <string name="you_will_receive_an_otp_on_this_email">You will receive an OTP on this email</string>
    <string name="send_otp">Send OTP</string>
    <string name="reset_password">Reset Password</string>
    <string name="use_a_different_password_from_the_past_please_note_down_this_password_so_you_don_t_forget_dum_dum_tq">Use a different password from the past. Please note down this password so you don’t forget dum dum. TQ</string>
    <string name="next">Next</string>
    <string name="enter_your_otp">Enter your OTP</string>
    <string name="enter_the_otp_receive_in_your_email_to_verify_account">Enter the OTP receive in your email to verify account.</string>
    <string name="the_email_or_password_is_incorrect_try_again">the_email_or_password_is_incorrect_try_again</string>
    <string name="cancel">Cancel</string>
    <string name="report_post">Report <font fgcolor="#E01818">@aaronmatt</font>\'s post</string>
    <string name="report_page_description">We are asking the reason for the reporting because we want to know what you’re experiencing or seeing. This helps us figure out what’s going on here and resolve the issue more quickly and accurately.</string>
    <string name="send">send</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="delete_account">Delete Account</string>
    <string name="log_out">Log Out</string>
    <string name="comment">Comment</string>
    <string name="add_your_comments">Add your comments...</string>
    <string name="additional_info_text">Add additional information to help with your report</string>
    <string name="post">Post</string>
    <string name="caption_text">Add a caption to your post</string>
    <string name="char_limit">0/50</string>
    <string name="chats">Chats</string>
    <string-array name="report_reasons">
        <item>Select the reason...</item>
        <item>Going against guidelines</item>
        <item>Has violent content</item>
        <item>Stolen content from other creator</item>
        <item>Ugly</item>
        <item>I do not like it</item>
    </string-array>
    <string name="profile_image">Profile Image</string>
    <string name="change_profile_image">Change Profile Image</string>
    <string name="about">About</string>
    <string name="save">save</string>
    <string name="display_name">Name</string>
    <string name="display_about">About</string>
    <string name="name_hint">your name</string>
    <string name="about_hint">breif information about yourself</string>
</resources>
