<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mountain2"
    tools:context=".SignUpActivity">

    <Button
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="18sp"
        android:background="@color/transparent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        android:onClick="backClicked"/>

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/back_btn"
        android:layout_marginTop="35dp"
        android:text="@string/create_your_account"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sign_up_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/let_s_share_your_work_to_the_world"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up_text2"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounder_btn"
        android:backgroundTint="@color/field_background"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingHorizontal="30dp"
        android:paddingVertical="15dp"
        android:textSize="22sp"
        android:layout_marginHorizontal="35dp"/>

    <EditText
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_field"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounder_btn"
        android:backgroundTint="@color/field_background"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="30dp"
        android:paddingVertical="15dp"
        android:textSize="22sp"
        android:layout_marginHorizontal="35dp"/>

    <EditText
        android:id="@+id/passwod_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_field"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounder_btn"
        android:backgroundTint="@color/field_background"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="30dp"
        android:paddingVertical="15dp"
        android:textSize="22sp"
        android:layout_marginHorizontal="35dp"/>


    <EditText
        android:id="@+id/passwod_field2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwod_field"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounder_btn"
        android:backgroundTint="@color/field_background"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingHorizontal="30dp"
        android:paddingVertical="15dp"
        android:textSize="22sp"
        android:layout_marginHorizontal="35dp"/>



    <LinearLayout
        android:id="@+id/vertical_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp">

        <Button
            android:id="@id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_btn"
            android:backgroundTint="@color/yellow"
            android:paddingVertical="15dp"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginHorizontal="35dp"
            android:onClick="signUpClicked"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/sign_up_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/already_have_an_account"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/sign_up_link2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/log_in"
                android:textColor="@color/yellow"
                android:textSize="18sp"
                android:onClick="logInClicked"/>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>