<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mountain2"
    tools:context=".PasswordRecoveryActivity">

    <Button
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="18sp"
        android:background="@color/transparent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        android:onClick="backClicked"/>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/back_btn"
        android:layout_marginTop="35dp"
        android:text="@string/forgot_password"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forgot_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/please_enter_your_email_to_receive_your_otp_to_reset_your_password"
        android:textColor="@color/white"
        android:layout_marginHorizontal="35dp"
        android:textSize="18sp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot_password_text"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounder_btn"
        android:backgroundTint="@color/field_background"
        android:ems="10"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="30dp"
        android:paddingVertical="15dp"
        android:textSize="22sp"
        android:layout_marginHorizontal="35dp"
        android:autofillHints="no" />

    <TextView
        android:id="@+id/otp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/you_will_receive_an_otp_on_this_email"
        android:textColor="@color/white"
        android:layout_marginHorizontal="35dp"
        android:textSize="18sp" />

    <Button
        android:id="@id/sign_up_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_btn"
        android:backgroundTint="@color/yellow"
        android:paddingVertical="15dp"
        android:text="@string/send_otp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginHorizontal="35dp"
        android:onClick="otpClicked"/>

</RelativeLayout>