<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mountain2"
    tools:context=".PasswordResettingActivity">

    <Button
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="18sp"
        android:background="@color/transparent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        android:onClick="backClicked"/>

    <TextView
        android:id="@+id/reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/back_btn"
        android:layout_marginTop="35dp"
        android:text="@string/reset_password"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/reset_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reset_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/use_a_different_password_from_the_past_please_note_down_this_password_so_you_don_t_forget_dum_dum_tq"
        android:textColor="@color/white"
        android:layout_marginHorizontal="35dp"
        android:textSize="18sp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/password1_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reset_password_text"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounder_btn"
        android:backgroundTint="@color/field_background"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:paddingHorizontal="30dp"
        android:paddingVertical="15dp"
        android:textSize="22sp"
        android:layout_marginHorizontal="35dp"
        android:autofillHints="no" />

    <EditText
        android:id="@+id/password2_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password1_field"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounder_btn"
        android:backgroundTint="@color/field_background"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingHorizontal="30dp"
        android:paddingVertical="15dp"
        android:textSize="22sp"
        android:layout_marginHorizontal="35dp"
        android:autofillHints="no" />


    <Button
        android:id="@id/sign_up_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_btn"
        android:backgroundTint="@color/yellow"
        android:paddingVertical="15dp"
        android:text="@string/next"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginHorizontal="35dp"
        android:onClick="nextClicked"/>

</RelativeLayout>