<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mountain2"
    tools:context=".MainActivity">


    <!--    If not using background attribute-->
    <!--    <ImageView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:scaleType="centerCrop"-->
    <!--        android:src="@drawable/mountain2"-->
    <!--        />-->

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:text="@string/welcome_to"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="35dp"/>

    <TextView
        android:id="@+id/app_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_text"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/archivo_black"
        android:text="@string/app_name"
        android:textColor="@color/yellow"
        android:textSize="45sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="35dp"/>


    <TextView
        android:id="@+id/description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_name_text"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="55dp"
        android:layout_marginTop="25dp"
        android:text="@string/description_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        />

    <LinearLayout
        android:id="@+id/vertical_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:layout_marginHorizontal="35dp">

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="140dp"
            android:background="@drawable/round_btn"
            android:backgroundTint="@color/white"
            android:onClick="signUpClicked"
            android:text="@string/sign_up"
            android:textSize="20sp"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/log_in_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_btn"
            android:backgroundTint="@color/yellow"
            android:onClick="logInClicked"
            android:text="@string/log_in"
            android:textSize="20sp"
            android:textColor="@color/black" />
    </LinearLayout>


</RelativeLayout>
